--- a/basic_data_type/Find the runner-up score.ipynb
+++ b/basic_data_type/Find the runner-up score.ipynb
@@ -4,42 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mJupyter server crashed. Unable to connect. \n",
-      "\u001b[1;31mError code from Jupyter: 1\n",
-      "\u001b[1;31musage: jupyter.py [-h] [--version] [--config-dir] [--data-dir] [--runtime-dir]\n",
-      "\u001b[1;31m                  [--paths] [--json] [--debug]\n",
-      "\u001b[1;31m                  [subcommand]\n",
-      "\u001b[1;31m\n",
-      "\u001b[1;31mJupyter: Interactive Computing\n",
-      "\u001b[1;31m\n",
-      "\u001b[1;31mpositional arguments:\n",
-      "\u001b[1;31m  subcommand     the subcommand to launch\n",
-      "\u001b[1;31m\n",
-      "\u001b[1;31moptional arguments:\n",
-      "\u001b[1;31m  -h, --help     show this help message and exit\n",
-      "\u001b[1;31m  --version      show the versions of core jupyter packages and exit\n",
-      "\u001b[1;31m  --config-dir   show Jupyter config dir\n",
-      "\u001b[1;31m  --data-dir     show Jupyter data dir\n",
-      "\u001b[1;31m  --runtime-dir  show Jupyter runtime dir\n",
-      "\u001b[1;31m  --paths        show all Jupyter paths. Add --json for machine-readable\n",
-      "\u001b[1;31m                 format.\n",
-      "\u001b[1;31m  --json         output paths as machine-readable json\n",
-      "\u001b[1;31m  --debug        output debug information about paths\n",
-      "\u001b[1;31m\n",
-      "\u001b[1;31mAvailable subcommands:\n",
-      "\u001b[1;31m\n",
-      "\u001b[1;31mJupyter command `jupyter-notebook` not found. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "Given the participants' score sheet for your University Sports Day, you are required to find the runner-up score. You are given n scores. Store them in a list and find the score of the runner-up.\n",
@@ -56,48 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mJupyter server crashed. Unable to connect. \n",
-      "\u001b[1;31mError code from Jupyter: 1\n",
-      "\u001b[1;31musage: jupyter.py [-h] [--version] [--config-dir] [--data-dir] [--runtime-dir]\n",
-      "\u001b[1;31m                  [--paths] [--json] [--debug]\n",
-      "\u001b[1;31m                  [subcommand]\n",
-      "\u001b[1;31m\n",
-      "\u001b[1;31mJupyter: Interactive Computing\n",
-      "\u001b[1;31m\n",
-      "\u001b[1;31mpositional arguments:\n",
-      "\u001b[1;31m  subcommand     the subcommand to launch\n",
-      "\u001b[1;31m\n",
-      "\u001b[1;31moptional arguments:\n",
-      "\u001b[1;31m  -h, --help     show this help message and exit\n",
-      "\u001b[1;31m  --version      show the versions of core jupyter packages and exit\n",
-      "\u001b[1;31m  --config-dir   show Jupyter config dir\n",
-      "\u001b[1;31m  --data-dir     show Jupyter data dir\n",
-      "\u001b[1;31m  --runtime-dir  show Jupyter runtime dir\n",
-      "\u001b[1;31m  --paths        show all Jupyter paths. Add --json for machine-readable\n",
-      "\u001b[1;31m                 format.\n",
-      "\u001b[1;31m  --json         output paths as machine-readable json\n",
-      "\u001b[1;31m  --debug        output debug information about paths\n",
-      "\u001b[1;31m\n",
-      "\u001b[1;31mAvailable subcommands:\n",
-      "\u001b[1;31m\n",
-      "\u001b[1;31mJupyter command `jupyter-notebook` not found. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66\n"
      ]
     }
    ],
    "source": [
+    "# 解法一：去重＋排序＋找到倒數第二個\n",
     "n = 3\n",
     "arr = map(int, input().split())\n",
-    "print(arr)"
+    "ans = sorted(set((list(arr))))\n",
+    "print(ans[-2])"
    ]
   },
   {
@@ -105,7 +45,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 解法二：找到最大的，去除後，再找一次最大的（原先的第二大）\n",
+    "unique_scores = list(set(scores))\n",
+    "max_score = max(unique_scores)\n",
+    "unique_scores.remove(max_score)\n",
+    "return max(unique_scores)"
+   ]
   }
  ],
  "metadata": {
@@ -115,7 +61,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.6"
   },
   "orig_nbformat": 4,
