modify nested notes

--- a/basic_data_type/Nested lists.ipynb
+++ b/basic_data_type/Nested lists.ipynb
@@ -79,9 +79,10 @@
     "    score_list = [i[1] for i in total_list]\n",
     "    second_lower = sorted(set(score_list))[1] \n",
     "\n",
-    "    # 找姓名\n",
+    "    # 找姓名(記得List Comprehension 只能簡化list的創建，印出裡面的元素還是需要傳統寫法)\n",
     "    result_name_list = [i[0] for i in total_list if i[1] == second_lower ]\n",
-    "    result_name = sorted(result_name_list)"
+    "    for result_name in sorted(result_name_list):\n",
+    "        print(result_name)"
    ]
   }
  ],
