--- a/basic_data_type/finding-the-percentage.ipynb
+++ b/basic_data_type/finding-the-percentage.ipynb
@@ -103,32 +103,32 @@
     "##### 小學習 － 題目是如何做到把輸入的key,value放到空字典中的？\n",
     "第一步驟：\n",
     "\n",
-    "    ```python\n",
+    "```python\n",
     "        for _ in range(n):\n",
-    "            name, *line = input().split()\n",
-    "    ```\n",
+    "            name, *line = input().split() # ←\n",
+    "```\n",
     "- range(n) = 一開始輸入的學生數量，因此會按照學生的數量跑完迴圈\n",
     "- `name, *line = input().split()` = 將輸入的結果用空格區分，變成name = input()的第一個，line = 剩餘的數字（目前是字串）list\n",
     "\n",
     "第二步驟：\n",
     "\n",
-    "    ```python\n",
+    "```python\n",
     "        for _ in range(n):\n",
     "            name, *line = input().split()\n",
     "            scores = list(map(float, line)) # ←\n",
-    "    ```\n",
+    "```\n",
     "- 將剛剛分割出來的字串型態的數字，轉換成浮點數且list\n",
     "- 原本為['23', '56', '89']，轉換為 scores = [23, 56, 89] \n",
     "\n",
     "第三步驟：\n",
     "\n",
-    "    ```python\n",
+    "```python\n",
     "    student_marks = {} \n",
     "        for _ in range(n):\n",
     "            name, *line = input().split()\n",
     "            scores = list(map(float, line))\n",
     "            student_marks[name] = scores # ←\n",
-    "    ```\n",
+    "```\n",
     "- 將姓名、分數放進剛剛一開始的空字典 student_marks 中\n",
     "- 結果變成 student_marks = {\"alice\": [23, 56, 89] }"
    ]
