finished find-a-string

--- a/Strings/find a string.ipynb
+++ b/Strings/find a string.ipynb
@@ -92,7 +92,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 不固定的子字串排列\n",
+    "\n",
+    "a = 'yoyoyoyotv'\n",
+    "b = 'yo'\n",
+    "b_len = len(b)\n",
+    "for i in range(len(a) - b_len + 1 ):\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
