finished find-a-string

--- a/Strings/find a string.ipynb
+++ b/Strings/find a string.ipynb
@@ -51,9 +51,7 @@
     }
    ],
    "source": [
-    "# def count_substring(string, sub_string):\n",
-    "#     return\n",
-    "\n",
+    "# 測試\n",
     "string = input().strip()\n",
     "# sub_string = input().strip()\n",
     "# print(string, sub_string)\n",
@@ -76,11 +74,12 @@
     }
    ],
    "source": [
+    " # 這樣寫不行， 因為b不一定是固定的\n",
     "a = 'yoyotv'\n",
     "b = 'yo'\n",
     "count = 0\n",
     "for i in range(0, len(a)-1):\n",
-    "    target = (a[i] + a[i+1]) # 這樣寫不行， 因為b不一定是固定的\n",
+    "    target = (a[i] + a[i+1])\n",
     "    if b == target:\n",
     "        count += 1\n",
     "print(count)\n",
@@ -89,19 +88,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# 不固定的子字串排列\n",
     "\n",
-    "a = 'yoyoyoyotv'\n",
-    "b = 'yo'\n",
+    "a = 'yoyoyoyotv' # 10\n",
+    "b = 'yo' # 2\n",
     "b_len = len(b)\n",
-    "for i in range(len(a) - b_len + 1 ):\n",
-    "\n",
-    "\n"
+    "count = 0 #起始為0\n",
+    "for i in range(len(a) - b_len + 1 ): \n",
+    "    # 10-2+1 = 9 why 是range(9?) 因為確保找的次數不要少於子串列\n",
+    "    # 例如，不希望查到最後一個是v?，但其實已經到頭了。\n",
+    "    target = a[i:i+b_len]\n",
+    "    if target == b:\n",
+    "        count += 1\n",
+    "print(count) # 只需要最終結果，print最外層\n",
+    "        \n",
+    "# a[i:i+b_len]\n",
+    "# 0:0+2 = 0:2 = 0, 1\n",
+    "# 1:1+2 = 1:3 = 1, 2\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_substring(string, sub_string):\n",
+    "    len_sub_string = len(sub_string)\n",
+    "    count = 0\n",
+    "    for i in range(0, len(string) - len_sub_string + 1):\n",
+    "        target = string[i:i+len_sub_string]\n",
+    "        if target == sub_string:\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    string = input().strip()\n",
+    "    sub_string = input().strip()\n",
+    "    count = count_substring(string, sub_string)\n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 學習筆記\n",
+    "- 動態的參數：`a[i:i+1] -> a[i:i+len(b)]` 可以按照輸出的字串數量而定\n",
+    "- 索引範圍控制：考量到`range(len(a))`會呈現「最後一個值還要跟其他匹配會越界」-> `range(len(a)-len(b)+1)`可以避開界線"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
