finished find-a-string

--- a/Strings/string-validators.ipynb
+++ b/Strings/string-validators.ipynb
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 筆記：flag ＋ break 解題技巧\n",
+    "#### 筆記：flag ＋ break 解題技巧\n",
     "- flag 使用時機：flag應用在「需要辨識狀態」上，可以初始建立一個false/true flag，然後透過檢驗改變狀態。\n",
     "- 注意事項：小心局部變數和全域變數的問題\n",
     "- break 的使用時機：\n",
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 筆記：全域變數 ＆ 局部變數\n",
+    "#### 筆記：全域變數 ＆ 局部變數\n",
     "- 定義：\n",
     "    - 全域變數：所有程式空間共同使用的變數，所有的def都可以訪問、更改，\n",
     "        - 具備一般不建議def裡直接更改，原因是互相依存的關係會放讓此變數複雜度增加\n",
@@ -312,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 筆記：解題方法論 － 累加器或狀態管理\n",
+    "#### 筆記：解題方法論 － 累加器或狀態管理\n",
     "- 核心概念：初始化 -> 迭代更新 -> 返回結果\n",
     "- 經典的用法：\n",
     "    - 布林值累加（像是本次的flag)\n",
